deploy/kubernetes/slim/postgres_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: alfresco
  labels:
    app: alfresco
    tiers: database
    version: v201707
spec:
  serviceName: alfresco-postgres
  replicas: 1
  selector:
    matchLabels:
      app: alfresco
      tiers: database
      version: v201707
  template:
    metadata:
      labels:
        app: alfresco
        tiers: database
        version: v201707
    spec:
      containers:
      - image: amd64/postgres:9.4
        name: postgres
        imagePullPolicy: Always
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: alfresco-db
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: alfresco-db
      spec:
        accessModes: [ "ReadWriteMany"]
        # storageClassName: ''
        resources:
          requests:
            storage: 10Gi
---
