deploy/kubernetes/slim/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: alfresco
  labels:
    app: alfresco
    tiers: database
spec:
  type: ClusterIP
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: alfresco
    tiers: database
---
