deploy/kubernetes/slim/alfresco_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alfresco
  namespace: alfresco
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: alfresco.weavelab.io
    http:
      paths:
      - backend:
          serviceName: alfresco
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - alfresco.weavelab.io
    secretName: alfresco-prod-cert
